toggle option spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -623,7 +623,7 @@ body.light-mode .highlight .il { color: #009999 } /* Literal.Number.Integer.Long
     text-align: right;
     line-height: 1.25;
     padding: 5px 10px;
-    margin: 0 5px;
+    margin-left: 15px; /* Adjusted left margin for even spacing */
   }
 
   .post-header h1 { font-size: 36px; }
